Try to fix image resize on mobile

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header {
 }
 
 #hero-section {
-  overflow: scroll;
+  overflow: hidden;
   background: linear-gradient(rgba(39, 39, 39, .4), rgba(39, 39, 39, .4)), url('./img/hero.jpg');
   background-repeat: no-repeat;
   background-size: cover;
